--- a/WebVisualizations/Comparison.html
+++ b/WebVisualizations/Comparison.html
@@ -66,26 +66,11 @@
     <div class="container">
       <br>
       <div class="row">
-
-        <div class="col-sm-12 col-md-8 col-lg-8 bg-white">
-          <br>
-          <h1>Summary: Latitude vs. X</h1>
-          <hr>
-          <img src="../Resources/assets/images/Fig1.png" alt="Latitude vs. Temperature" width="280" align="left">
-          <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To
-            accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500
-            cities.</p>
-          <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors
-            we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the souce data
-            and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and
-            correlations witnesseed.</p>
-          <hr>
-        </div>
-
         <div class="col-sm-12 col-md-4 col-lg-4 bg-white">
           <br>
-          <h1>Visualizations</h1>
+          <h1>Comparison: Latitude vs X</h1>
           <hr>
+          <p>Click any plot ot get an in-depth analysis</p>
           <div class='row'>
             <div class="col-sm-12 col-md-6 col-lg-6 bg-white">
               <a href="MaxTemperature.html"><img src="../Resources/assets/images/Fig1.png" width=100% alt="Latitude vs. Temperature"></a>
