--- a/WebVisualizations/WindSpeed.html
+++ b/WebVisualizations/WindSpeed.html
@@ -69,16 +69,10 @@
 
         <div class="col-sm-12 col-md-8 col-lg-8 bg-white">
           <br>
-          <h1>Summary: Latitude vs. X</h1>
+          <h1>Max Temperature</h1>
           <hr>
-          <img src="../Resources/assets/images/Fig1.png" alt="Latitude vs. Temperature" width="280" align="left">
-          <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To
-            accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500
-            cities.</p>
-          <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors
-            we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the souce data
-            and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and
-            correlations witnesseed.</p>
+          <img src="../Resources/assets/images/Fig1.png" width=100%  alt="Latitude vs. Temperature">
+          <p>??????????????????????????????????</p>
           <hr>
         </div>
 
@@ -97,7 +91,7 @@
               <a href="Cloudiness.html"><img src="../Resources/assets/images/Fig3.png" width=100% alt="Latitude vs. Cloudiness"></a>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6 bg-white">
-              <a href="WindSpeed.html"><img src="../Resources/assets/images/Fig4.png" width=100% alt="Latitude vs. Wind Speed"></a>
+              <a href="WindSpeed.html"><img src="../Resources/assets/images/Fig4.png" width=100% class="sel_img" alt="Latitude vs. Wind Speed"></a>
             </div>
           </div>
           
