--- a/WebVisualizations/Humidity.html
+++ b/WebVisualizations/Humidity.html
@@ -69,10 +69,10 @@
 
         <div class="col-sm-12 col-md-8 col-lg-8 bg-white">
           <br>
-          <h1>Max Temperature</h1>
+          <h1>Humidity</h1>
           <hr>
-          <img src="../Resources/assets/images/Fig1.png" width=100%  alt="Latitude vs. Temperature">
-          <p>????????????????????????????</p>
+          <img src="../Resources/assets/images/Fig2.png" width=100%  alt="Latitude vs. Humidity">
+          <p>There is no obvioius relationship between humidity and city latitude.</p>
           <hr>
         </div>
 
