--- a/WebVisualizations/Cloudiness.html
+++ b/WebVisualizations/Cloudiness.html
@@ -69,10 +69,10 @@
 
         <div class="col-sm-12 col-md-8 col-lg-8 bg-white">
           <br>
-          <h1>Max Temperature</h1>
+          <h1>Cloudiness</h1>
           <hr>
-          <img src="../Resources/assets/images/Fig1.png" width=100%  alt="Latitude vs. Temperature">
-          <p>?????????????????????????????????</p>
+          <img src="../Resources/assets/images/Fig3.png" width=100%  alt="Latitude vs. Cloudiness">
+          <p>City latitude has little influnce on cloudiness.</p>
           <hr>
         </div>
 
