scroll bar added.

--- a/WebVisualizations/Data.html
+++ b/WebVisualizations/Data.html
@@ -23,10 +23,11 @@
     background-color: rgb(210, 210, 210);
 }
 
-.wrapper1, .wrapper2{overflow-x: auto; overflow-y:hidden;}
+.wrapper1, .wrapper2 {
+    overflow-x: auto; overflow-y:hidden;
+}
 .div1 {width:1000px; height: 5px; }
-.div2 {width:1000px;  
-overflow: auto;}
+.div2 {width:1000px; overflow: auto;}
 </style>
 
 <script>
